Changelog
=========


0.3.0
-----

* Fixed syntax error on relation name ("internal_page" was "interal_page") [keul]
* Disabled the backup of basic Plone ATLink [keul]
* Fixed some integration problem in content/link.py related to p4a (remoteUrl) [lucabel] 
* Created italian translation [andrea]

0.2.0
-----

* Added a lot home ATLink methods not migrated to the SmartLink class.
* Fixed a bug that lead all reordering actions in folders with SmartLink inside to failure (or to chaotic results).
  After migrating to this version from the 0.1.0 you can also launch the **fix_meta_data** external method
  or your folder will remains broken.

0.1.0
-----

* Initial release
